début migr. js -> ts, début stream client <-> serv

--- a/hermes/src/index.html
+++ b/hermes/src/index.html
@@ -103,6 +103,6 @@
             <footer><small>&copy; Copyright 2023, HBW & Co.</small></footer> 
         </div>
         
-        <script src="./scripts/script.js" type="module"></script>
+        <script src="./scripts/main.ts" type="module"></script>
     </body>
 </html>
