Nommage, struct. proj., POO

--- a/hermes/src/frontend/index.html
+++ b/hermes/src/frontend/index.html
@@ -4,15 +4,17 @@
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]>      <html class="no-js"> <![endif]-->
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Hermes</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="./styles/style.css">
-        <link rel="stylesheet" href="./fonts/font-awesome-4.7.0/css/font-awesome.min.css">
-    </head>
+
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Hermes</title>
+    <meta name="description" content="Serveur de supervision">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./fonts/font-awesome-4.7.0/css/font-awesome.min.css">
+</head>
+
 <body>
     <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
@@ -32,13 +34,14 @@
             </div>
             <div id="dataSection" class="pageSection">
                 <h2><i class="fa fa-database" aria-hidden="true"></i> Données du cube</h2>
+                <h3></h3>
                 <canvas id="engineCurrentChart"></canvas>
             </div>
             <div id="configurationSection" class="pageSection">
                 <h2><i class="fa fa-cog" aria-hidden="true"></i> Configuration</h2>
             </div>
         </div>
-        <footer><small>&copy; Copyright 2023, HBW & Co.</small></footer>
+        <footer>Hugo JUNIOR, Benjamin PLA et William HAMET</footer>
     </div>
     <script src="./scripts/main.ts" type="module"></script>
 </body>
