Qui va rembourser mes frais de psy ?

--- a/hermes/src/frontend/index.html
+++ b/hermes/src/frontend/index.html
@@ -35,15 +35,32 @@
             <div id="dataSection" class="pageSection">
                 <h2><i class="fa fa-database" aria-hidden="true"></i> Données du cube</h2>
                 <h3></h3>
-                <canvas id="engineCurrentChart"></canvas>
+                <canvas id="engineCurrentChart" ></canvas>
             </div>
             <div id="configurationSection" class="pageSection">
                 <h2><i class="fa fa-cog" aria-hidden="true"></i> Configuration</h2>
             </div>
         </div>
-        <footer>Hugo JUNIOR, Benjamin PLA et William HAMET</footer>
+        <footer>Hugo JUNIOR</footer>
+        
     </div>
     <script src="./scripts/main.ts" type="module"></script>
 </body>
-
 </html>
+
+<!-- 
+
+        __  ______ _       __   ____          
+       / / / / __ ) |     / /  /  _/___  _____
+      / /_/ / __  | | /| / /   / // __ \/ ___/
+     / __  / /_/ /| |/ |/ /  _/ // / / / /___ 
+    /_/ /_/_____/ |__/|__/  /___/_/ /_/\___(_)
+                                            
+    +---------------------------------------------------+
+    | Made by HBW inc. with <3                          |
+    | Hugo JUNIOR, CEO - (31.hugojunior@gmail.com)      |
+    | Benjamin PLA, COO - (simplewles@gmail.com)        |
+    | William HAMMET, CTO - (william.hammet@gmail.com)  |
+    +---------------------------------------------------+
+
+-->
