Tentative de suppression du bundler js superflu

--- a/hermes/public/index.html
+++ b/hermes/public/index.html
@@ -1,8 +1,4 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]>      <html class="no-js"> <![endif]-->
 <html>
 
 <head>
@@ -16,9 +12,6 @@
 </head>
 
 <body>
-    <!--[if lt IE 7]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
     <div id="wrapper">
         <div id="header">
             <div id="navbar">
@@ -35,32 +28,27 @@
             <div id="dataSection" class="pageSection">
                 <h2><i class="fa fa-database" aria-hidden="true"></i> Données du cube</h2>
                 <h3></h3>
-                <canvas id="engineCurrentChart" ></canvas>
+                <canvas id="engineCurrentChart"></canvas>
             </div>
             <div id="configurationSection" class="pageSection">
                 <h2><i class="fa fa-cog" aria-hidden="true"></i> Configuration</h2>
             </div>
         </div>
         <footer>Hugo JUNIOR</footer>
-        
+
     </div>
-    <script src="./scripts/main.ts" type="module"></script>
+    <script>var exports = {};</script>
+    <script src="./scripts/main.js" type="module"></script>
 </body>
+
 </html>
 
 <!-- 
-
         __  ______ _       __   ____          
        / / / / __ ) |     / /  /  _/___  _____
       / /_/ / __  | | /| / /   / // __ \/ ___/
      / __  / /_/ /| |/ |/ /  _/ // / / / /___ 
     /_/ /_/_____/ |__/|__/  /___/_/ /_/\___(_)
                                             
-    +---------------------------------------------------+
-    | Made by HBW inc. with <3                          |
-    | Hugo JUNIOR, CEO - (31.hugojunior@gmail.com)      |
-    | Benjamin PLA, COO - (simplewles@gmail.com)        |
-    | William HAMMET, CTO - (william.hammet@gmail.com)  |
-    +---------------------------------------------------+
-
+             Made with <3 by HBW Inc.
 -->
