--- a/hermes/src/frontend/index.html
+++ b/hermes/src/frontend/index.html
@@ -37,7 +37,7 @@
         </div>
         <footer>Hugo JUNIOR</footer>
     </div>
-    <script src="./scripts/main.js" type="module"></script>
+    <script src="./scripts/main.js"></script>
 </body>
 
 </html>
