--- a/hermes/src/frontend/index.html
+++ b/hermes/src/frontend/index.html
@@ -8,7 +8,6 @@
     <meta name="description" content="Serveur de supervision">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="./styles/style.css">
-    <link rel="stylesheet" href="./styles/dropdown.css">
     <link rel="stylesheet" href="./fonts/font-awesome-4.7.0/css/font-awesome.min.css">
     <script src="./scripts/lib/chart.js/dist/chart.umd.js"></script>
 </head>
@@ -26,10 +25,8 @@
             <div id="dataSection" class="pageSection">
                 <h2><i class="fa fa-database" aria-hidden="true"></i> Données du cube</h2>
                 <h3>Courant moteur</h3>
-
-                <label for="pet-select">Choose a pet:</label>
                 <select id="rotationSelection">
-                    <option value="">--Please choose an option--</option>
+                    <option value="">-- Sélectionner rotation--</option>
                 </select>
 
                 <canvas id="engineCurrentChart"></canvas>
