--- a/hermes/src/frontend/index.html
+++ b/hermes/src/frontend/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="stylesheet" href="./fonts/font-awesome-4.7.0/css/font-awesome.min.css">
-    <script src="./scripts/lib/chart.js/dist/chart.umd.js"></script>
+    <!-- <script src="./scripts/lib/chart.js/dist/chart.umd.js"></script> -->
 </head>
 
 <body>
