dernières modifs ouuuuuuuu ?????

--- a/hermes/src/frontend/index.html
+++ b/hermes/src/frontend/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="stylesheet" href="./fonts/font-awesome-4.7.0/css/font-awesome.min.css">
-    <!-- <script src="./scripts/lib/chart.js/dist/chart.umd.js"></script> -->
+    <script src="./scripts/lib/chart.js/dist/chart.umd.js"></script>
 </head>
 
 <body>
@@ -26,7 +26,7 @@
                 <h2><i class="fa fa-database" aria-hidden="true"></i> Données du cube</h2>
                 <h3>Courant moteur</h3>
                 <select id="rotationSelection">
-                    <option value="">-- Sélectionner rotation--</option>
+                    <option value="">-- Sélectionner rotation --</option>
                 </select>
 
                 <canvas id="engineCurrentChart"></canvas>
