Catégories IHM pour la posterité

--- a/hermes/src/frontend/index.html
+++ b/hermes/src/frontend/index.html
@@ -18,6 +18,7 @@
             <div id="navbar">
                 <a class="topbarShortcut" href="#">Hermes</a>
                 <a class="topbarShortcut" href="#dataSection">Données</a>
+                <a class="topbarShortcut" href="#logsSection">Journaux</a>
                 <a class="topbarShortcut" href="#configurationSection">Configuration</a>
             </div>
         </div>
@@ -28,8 +29,10 @@
                 <select id="rotationSelection">
                     <option value="">-- Sélectionner rotation --</option>
                 </select>
-
                 <canvas id="engineCurrentChart"></canvas>
+            </div>
+            <div id="logsSection" class="pageSection">
+                <h2><i class="fa fa-book" aria-hidden="true"></i> Journaux</h2>
             </div>
             <div id="configurationSection" class="pageSection">
                 <h2><i class="fa fa-cog" aria-hidden="true"></i> Configuration</h2>
